aprouch funcion reconnstruccion (no funcionaa)

--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -80,7 +80,6 @@
     "  # Separa el contenido en bloques\n",
     "  bloques = contenido.split('\\n\\n')\n",
     "  ganancias_esperadas = []\n",
-    "  ganancia = 0\n",
     "  nombre_archivo = ''\n",
     "\n",
     "  # Itera a través de cada bloque y busca \"Ganancia maxima\" dentro de cada uno\n",
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +112,19 @@
     "# Devuelve la ganancia obtenida en el dia según la energía disponible.\n",
     "def ganancia_dia_actual(e_i, s_i, dia, dias_entrenados):\n",
     "  return min(e_i[dia], s_i[dias_entrenados])\n",
+    "\n",
+    "def reconstruir_solucion(ganancias):\n",
+    "  index = len(ganancias) - 1\n",
+    "  solucion = []\n",
+    "  while index >= 0:\n",
+    "    cant_dias_entrenados = ganancias[index].index(max(ganancias[index]))\n",
+    "    solucion.append(\"Entreno\")\n",
+    "    if cant_dias_entrenados == 0:\n",
+    "      solucion.append(\"Descanso\")\n",
+    "      index -= 1\n",
+    "    index -= 1\n",
+    "       \n",
+    "  return solucion[::-1]\n",
     "\n",
     "# Recibe las ganancias de cada día (e_i) y las energias con las que se cuenta cada día (s_i).\n",
     "# Devuelve la ganancia máxima que se puede obtener a lo largo de varios días tomando decisiones \n",
@@ -135,7 +147,7 @@
     "    for dia_entrenado in range(1, dias_entrenados+1):\n",
     "      ganancias_obtenidas[dia][dia_entrenado] = ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
     "    dias_entrenados += 1\n",
-    "  return max(ganancias_obtenidas[cantidad_dias-1])\n"
+    "  return ganancias_obtenidas, max(ganancias_obtenidas[cantidad_dias-1])\n"
    ]
   },
   {
@@ -172,20 +184,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ganancia_max_3_dias = ganancia_maxima_posible(e_i_3, s_i_3)\n",
-    "ganancia_max_10_dias = ganancia_maxima_posible(e_i_10, s_i_10)\n",
-    "ganancia_max_10_dias_bis = ganancia_maxima_posible(e_i_10_bis, s_i_10_bis)\n",
-    "ganancia_max_10_dias_todo_entreno = ganancia_maxima_posible(e_i_10_todo_entreno, s_i_10_todo_entreno)\n",
-    "ganancia_max_50_dias = ganancia_maxima_posible(e_i_50, s_i_50)\n",
-    "ganancia_max_50_dias_bis = ganancia_maxima_posible(e_i_50_bis, s_i_50_bis)\n",
-    "ganancia_max_100_dias = ganancia_maxima_posible(e_i_100, s_i_100)\n",
-    "ganancia_max_500_dias = ganancia_maxima_posible(e_i_500, s_i_500)\n",
-    "ganancia_max_1000_dias = ganancia_maxima_posible(e_i_1000, s_i_1000)\n",
-    "ganancia_max_5000_dias = ganancia_maxima_posible(e_i_5000, s_i_5000)"
+    "g3, ganancia_max_3_dias = ganancia_maxima_posible(e_i_3, s_i_3)\n",
+    "g10, ganancia_max_10_dias = ganancia_maxima_posible(e_i_10, s_i_10)\n",
+    "g10bis, ganancia_max_10_dias_bis = ganancia_maxima_posible(e_i_10_bis, s_i_10_bis)\n",
+    "g10te, ganancia_max_10_dias_todo_entreno = ganancia_maxima_posible(e_i_10_todo_entreno, s_i_10_todo_entreno)\n",
+    "g50, ganancia_max_50_dias = ganancia_maxima_posible(e_i_50, s_i_50)\n",
+    "g50bis, ganancia_max_50_dias_bis = ganancia_maxima_posible(e_i_50_bis, s_i_50_bis)\n",
+    "g100, ganancia_max_100_dias = ganancia_maxima_posible(e_i_100, s_i_100)\n",
+    "g500, ganancia_max_500_dias = ganancia_maxima_posible(e_i_500, s_i_500)\n",
+    "g1000, ganancia_max_1000_dias = ganancia_maxima_posible(e_i_1000, s_i_1000)\n",
+    "g5000, ganancia_max_5000_dias = ganancia_maxima_posible(e_i_5000, s_i_5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Descanso', 'Entreno', 'Descanso', 'Entreno', 'Entreno', 'Entreno', 'Entreno', 'Entreno', 'Entreno', 'Entreno', 'Entreno']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(reconstruir_solucion(g10))"
    ]
   },
   {
