--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RESOLUCIÓN TP2"
+    "# TP2: Programación Dinámica"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,32 +67,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Devuelve un array con los resultados esperados de los archivos brindaods por la catedra\n",
-    "def obtener_ganancias_maximas_esperadas():\n",
-    "  path = 'sets/catedra/Resultados Esperados.txt'\n",
-    "  with open(path, 'r') as archivo:\n",
-    "      contenido = archivo.read() \n",
+    "# Devuelve un array con los resultados esperados de los archivos brindados por la catedra\n",
+    "def obtener_resultados_esperados():\n",
+    "    path = 'sets/catedra/Resultados Esperados.txt'\n",
+    "    with open(path, 'r') as archivo:\n",
+    "        contenido = archivo.read() \n",
     "\n",
-    "  # Separa el contenido en bloques\n",
-    "  bloques = contenido.split('\\n\\n')\n",
-    "  ganancias_esperadas = []\n",
-    "  nombre_archivo = ''\n",
+    "    # Separa el contenido en bloques\n",
+    "    bloques = contenido.split('\\n\\n')\n",
+    "    resultados_esperados = []\n",
     "\n",
-    "  # Itera a través de cada bloque y busca \"Ganancia maxima\" dentro de cada uno\n",
-    "  for bloque in bloques:\n",
-    "      lineas = bloque.split('\\n')\n",
-    "      for linea in lineas:\n",
-    "          if \".txt\" in linea:\n",
-    "              nombre_archivo = linea\n",
-    "          if linea.startswith('Ganancia maxima:'):\n",
-    "              ganancia_esperada = linea.split(':')[1].strip()\n",
-    "              ganancias_esperadas.append([nombre_archivo, int(ganancia_esperada)])\n",
+    "    # Itera a través de cada bloque y busca \"Ganancia maxima\" y \"Plan de entrenamiento\" dentro de cada uno\n",
+    "    for bloque in bloques:\n",
+    "        nombre_archivo = ''\n",
+    "        ganancia_maxima = 0\n",
+    "        plan_entrenamiento = []\n",
     "\n",
-    "  return ganancias_esperadas\n"
+    "        lineas = bloque.split('\\n')\n",
+    "        for linea in lineas:\n",
+    "            if \".txt\" in linea:\n",
+    "                nombre_archivo = linea\n",
+    "            if linea.startswith('Ganancia maxima:'):\n",
+    "                ganancia_maxima = int(linea.split(':')[1].strip())\n",
+    "            if linea.startswith('Plan de entrenamiento:'):\n",
+    "                plan_entrenamiento = [accion.strip() for accion in linea.split(':')[1].strip().split(',')]\n",
+    "        \n",
+    "        resultados_esperados.append({\n",
+    "            'nombre_archivo': nombre_archivo,\n",
+    "            'ganancia_maxima': ganancia_maxima,\n",
+    "            'plan_entrenamiento': plan_entrenamiento\n",
+    "        })\n",
+    "\n",
+    "    return resultados_esperados\n"
    ]
   },
   {
@@ -113,36 +123,42 @@
     "def ganancia_dia_actual(e_i, s_i, dia, dias_entrenados):\n",
     "  return min(e_i[dia], s_i[dias_entrenados])\n",
     "\n",
-    "def reconstruir_solucion(ganancias):\n",
-    "  index = len(ganancias) - 1\n",
+    "def reconstruir_solucion(ganancias, ganancia_maxima):\n",
+    "  n = len(ganancias) - 1\n",
     "  solucion = []\n",
-    "  while index >= 0:\n",
-    "    cant_dias_entrenados = ganancias[index].index(max(ganancias[index]))\n",
-    "    solucion.append(\"Entreno\")\n",
-    "    if cant_dias_entrenados == 0:\n",
-    "      solucion.append(\"Descanso\")\n",
-    "      index -= 1\n",
-    "    index -= 1\n",
-    "       \n",
-    "  return solucion[::-1]\n",
+    "  # recorrer la matriz bajando siempre por la diagonal hasta llegar a la fila 0,\n",
+    "  # luego ir al maximo de la anterior fila\n",
+    "  dia = n - 1 # columnas\n",
+    "  dias_entrenados = ganancias[n].index(ganancia_maxima) - 1 # filas\n",
+    "  solucion.append('Entreno')\n",
+    "  while dia >= 0:\n",
+    "    while dias_entrenados >= 0 and dia >= 0:\n",
+    "      solucion.append('Entreno')\n",
+    "      dias_entrenados -= 1\n",
+    "      dia -= 1\n",
+    "    if dia >= 0:\n",
+    "      solucion.append('Descanso')\n",
+    "      # ir al maximo de la columna anterior\n",
+    "      dia -= 1\n",
+    "      dias_entrenados = ganancias[dia].index(max(ganancias[dia]))\n",
+    "  return solucion[::-1] # invertir la solucion\n",
     "\n",
     "# Recibe las ganancias de cada día (e_i) y las energias con las que se cuenta cada día (s_i).\n",
     "# Devuelve la ganancia máxima que se puede obtener a lo largo de varios días tomando decisiones \n",
     "# óptimas sobre cómo asignar la energía disponible\n",
     "def ganancia_maxima_posible(e_i, s_i):\n",
     "\n",
-    "  cantidad_dias = len(e_i)\n",
+    "  cantidad_dias = len(e_i) # n\n",
     "\n",
-    "  ganancias_obtenidas = [[0] * cantidad_dias for _ in range(cantidad_dias)]\n",
+    "  ganancias_obtenidas = [[0] * cantidad_dias for _ in range(cantidad_dias)] # matriz de n*n\n",
     "  dias_entrenados = 2\n",
     "  ganancias_obtenidas[0][0] = ganancia_dia_actual(e_i, s_i, 0, 0)\n",
+    "  # inicializamos tmb el día 2 porque necesita el resultado de n = 0 (y se va de la matriz)\n",
     "  ganancias_obtenidas[1][0] = ganancia_dia_actual(e_i, s_i, 1, 0)\n",
     "  ganancias_obtenidas[1][1] = ganancia_dia_actual(e_i, s_i, 1, 1) + ganancias_obtenidas[0][0]\n",
-    "  \n",
-    "  for dia in range(2, cantidad_dias):\n",
-    "    ganancias_obtenidas[dia][0] = ganancia_dia_actual(e_i, s_i, dia, 0)\n",
     "\n",
     "  for dia in range(2, cantidad_dias):\n",
+    "    ganancias_obtenidas[dia][0] = ganancia_dia_actual(e_i, s_i, dia, 0)\n",
     "    ganancias_obtenidas[dia][0] += max(ganancias_obtenidas[dia-2])\n",
     "    for dia_entrenado in range(1, dias_entrenados+1):\n",
     "      ganancias_obtenidas[dia][dia_entrenado] = ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
@@ -166,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,34 +220,37 @@
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Descanso', 'Entreno', 'Descanso', 'Entreno', 'Entreno', 'Entreno', 'Entreno', 'Entreno', 'Entreno', 'Entreno', 'Entreno']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(reconstruir_solucion(g10))"
+    "planes_de_entrenamiento_optimos_obtenidos = [\n",
+    "reconstruir_solucion(g3, ganancia_max_3_dias),\n",
+    "reconstruir_solucion(g10, ganancia_max_10_dias),\n",
+    "reconstruir_solucion(g10bis, ganancia_max_10_dias_bis),\n",
+    "reconstruir_solucion(g10te, ganancia_max_10_dias_todo_entreno),\n",
+    "reconstruir_solucion(g50, ganancia_max_50_dias),\n",
+    "reconstruir_solucion(g50bis, ganancia_max_50_dias_bis),\n",
+    "reconstruir_solucion(g100, ganancia_max_100_dias),\n",
+    "reconstruir_solucion(g500, ganancia_max_500_dias),\n",
+    "reconstruir_solucion(g1000, ganancia_max_1000_dias),\n",
+    "reconstruir_solucion(g5000, ganancia_max_5000_dias)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultados_esperados = obtener_resultados_esperados()\n",
+    "\n",
+    "ganancias_obtenidas = [ganancia_max_3_dias, ganancia_max_10_dias, ganancia_max_10_dias_bis, ganancia_max_10_dias_todo_entreno,\\\n",
+    "                      ganancia_max_50_dias, ganancia_max_50_dias_bis, ganancia_max_100_dias, ganancia_max_500_dias, ganancia_max_1000_dias,\\\n",
+    "                      ganancia_max_5000_dias]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ganancias_obtenidas = [ganancia_max_3_dias, ganancia_max_10_dias, ganancia_max_10_dias_bis, ganancia_max_10_dias_todo_entreno,\\\n",
-    "                      ganancia_max_50_dias, ganancia_max_50_dias_bis, ganancia_max_100_dias, ganancia_max_500_dias, ganancia_max_1000_dias,\\\n",
-    "                      ganancia_max_5000_dias]\n",
-    "ganancias_maximas_esperadas = obtener_ganancias_maximas_esperadas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -260,13 +279,27 @@
     "# Imprime los resultados obtenidos y los esperados en una tabla\n",
     "resultados = []\n",
     "i = 0\n",
-    "for ganancia_esperada in ganancias_maximas_esperadas:\n",
-    "  es_correcto = \"Sí\" if ganancia_esperada[1] == ganancias_obtenidas[i] else \"No\"\n",
-    "  resultados.append([ganancia_esperada[0], ganancia_esperada[1], ganancias_obtenidas[i], es_correcto])\n",
+    "for ganancia_esperada in resultados_esperados:\n",
+    "  es_correcto = \"Sí\" if ganancia_esperada['ganancia_maxima'] == ganancias_obtenidas[i] and planes_de_entrenamiento_optimos_obtenidos[i] == ganancia_esperada['plan_entrenamiento'] else \"No\"\n",
+    "  resultados.append([ganancia_esperada['nombre_archivo'], ganancia_esperada['ganancia_maxima'], ganancias_obtenidas[i], es_correcto])\n",
     "  i += 1\n",
     "\n",
     "print(tabulate(resultados, headers=['Archivo', 'Ganancia Esperada', 'Ganancia Obtenida', 'Se obtuvo el resultado esperado?']))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reconstruímos las soluciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
