--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,18 +154,17 @@
     "  ganancias_obtenidas = [[0] * cantidad_dias for _ in range(cantidad_dias)] # matriz de n*n\n",
     "  dias_entrenados = 2\n",
     "  ganancias_obtenidas[0][0] = ganancia_dia_actual(e_i, s_i, 0, 0)\n",
-    "  if cantidad_dias > 1:\n",
-    "    # inicializamos tmb el día 2 porque necesita el resultado de n = 0 (y se va de la matriz)\n",
-    "    ganancias_obtenidas[1][0] = ganancia_dia_actual(e_i, s_i, 1, 0)\n",
-    "    ganancias_obtenidas[1][1] = ganancia_dia_actual(e_i, s_i, 1, 1) + ganancias_obtenidas[0][0]\n",
     "\n",
-    "    for dia in range(2, cantidad_dias):\n",
-    "      ganancias_obtenidas[dia][0] = ganancia_dia_actual(e_i, s_i, dia, 0)\n",
-    "      ganancias_obtenidas[dia][0] += max(ganancias_obtenidas[dia-2])\n",
-    "      for dia_entrenado in range(1, dias_entrenados+1):\n",
-    "        ganancias_obtenidas[dia][dia_entrenado] = ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
-    "      dias_entrenados += 1\n",
-    "  return ganancias_obtenidas, max(ganancias_obtenidas[cantidad_dias-1])\n"
+    "  for dia in range(1, cantidad_dias):\n",
+    "    ganancias_obtenidas[dia][0] = ganancia_dia_actual(e_i, s_i, dia, 0)\n",
+    "    ganancias_obtenidas[dia][0] += max(ganancia_2_dias_antes(ganancias_obtenidas, dia))\n",
+    "    for dia_entrenado in range(1, dias_entrenados):\n",
+    "      ganancias_obtenidas[dia][dia_entrenado] = ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
+    "    dias_entrenados += 1\n",
+    "  return ganancias_obtenidas, max(ganancias_obtenidas[cantidad_dias-1])\n",
+    "\n",
+    "def ganancia_2_dias_antes(ganancias_obtenidas, dia):\n",
+    "    return ganancias_obtenidas[dia-2] if dia > 1 else [0]\n"
    ]
   },
   {
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
