--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,14 @@
     "path_500 = 'sets/catedra/500.txt'\n",
     "path_1000 = 'sets/catedra/1000.txt'\n",
     "path_5000 = 'sets/catedra/5000.txt'\n",
-    "path_30000 = 'sets/nuestros/30000.txt'"
+    "path_30000 = 'sets/nuestros/30000.txt'\n",
+    "path_15000 = 'sets/nuestros/15000.txt'\n",
+    "path_1 = 'sets/nuestros/1.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -292,43 +294,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gráficos de complejidad"
+    "Generamos ahora nuestros propios sets de datos para probar el algoritmo con tamaños de entrada mayores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "random.seed(42)\n",
-    "# Generamos un set para 30000 entrenamientos\n",
-    "n = 30000\n",
-    "ganancias = [random.randint(1, 100) for _ in range(n)]\n",
-    "energias = random.sample(range(1, n + 1), n)\n",
-    "energias.sort(reverse=True)\n",
     "\n",
-    "with open(f'sets/nuestros/{n}.txt', 'w') as archivo:\n",
-    "    archivo.write(str(n) + '\\n')\n",
-    "    for ganancia in ganancias:\n",
-    "        archivo.write(str(ganancia) + '\\n')\n",
-    "    for energia in energias:\n",
-    "        archivo.write(str(energia) + '\\n')\n",
+    "def generar_set(n):\n",
+    "    ganancias = [random.randint(1, 100) for _ in range(n)]\n",
+    "    energias = random.sample(range(1, n + 1), n)\n",
+    "    energias.sort(reverse=True)\n",
     "\n",
-    "e_i, s_i = obtener_ganancias_y_energias(path_30000)\n"
+    "    with open(f'sets/nuestros/{n}.txt', 'w') as archivo:\n",
+    "        archivo.write(str(n) + '\\n')\n",
+    "        for ganancia in ganancias:\n",
+    "            archivo.write(str(ganancia) + '\\n')\n",
+    "        for energia in energias:\n",
+    "            archivo.write(str(energia) + '\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generar_set(30000)\n",
+    "generar_set(1) # para testear el caso borde\n",
+    "generar_set(15000)\n",
+    "e_i_30000, s_i_30000 = obtener_ganancias_y_energias(path_30000)\n",
+    "e_i_15000, s_i_15000 = obtener_ganancias_y_energias(path_15000)\n",
+    "e_i_1, s_i_1 = obtener_ganancias_y_energias(path_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 30k: 110.58277726173401 seconds ---\n",
+      "--- 15k: 27.63995862007141 seconds ---\n",
+      "El caso base de 1 dia es:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start_time = time.time()\n",
+    "g30000, ganancia_max_30000_dias = ganancia_maxima_posible(e_i_30000, s_i_30000)\n",
+    "print(\"--- 30k: %s seconds ---\" % (time.time() - start_time))\n",
+    "print(\"Ganancia máxima 30k: \", ganancia_max_30000_dias)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "g15000, ganancia_max_15000_dias = ganancia_maxima_posible(e_i_15000, s_i_15000)\n",
+    "print(\"--- 15k: %s seconds ---\" % (time.time() - start_time))\n",
+    "print(\"Ganancia máxima 15k: \", ganancia_max_15000_dias)\n",
+    "\n",
+    "g1, ganancia_max_1_dias = ganancia_maxima_posible(e_i_1, s_i_1)\n",
+    "print(f\"Ganancia del caso base con s_1 de {s_i_1}: \", ganancia_max_1_dias)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gráficos de complejidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "\n",
     "# Mide el tiempo de ejecución de ganancia_maxima_posible para cada tamaño de entrada\n",
+    "# de a intervalos de 100 hasta n\n",
     "def tiempos_a_graficar(e_i, s_i):\n",
     "  tamaños = []\n",
     "  duracion = []\n",
@@ -349,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -407,140 +460,26 @@
       "4800\n",
       "4900\n",
       "5000\n",
-      "5100\n",
-      "5200\n",
-      "5300\n",
-      "5400\n",
-      "5500\n",
-      "5600\n",
-      "5700\n",
-      "5800\n",
-      "5900\n",
-      "6000\n",
-      "6100\n",
-      "6200\n",
-      "6300\n",
-      "6400\n",
-      "6500\n",
-      "6600\n",
-      "6700\n",
-      "6800\n",
-      "6900\n",
-      "7000\n",
-      "7100\n",
-      "7200\n",
-      "7300\n",
-      "7400\n",
-      "7500\n",
-      "7600\n",
-      "7700\n",
-      "7800\n",
-      "7900\n",
-      "8000\n",
-      "8100\n",
-      "8200\n",
-      "8300\n",
-      "8400\n",
-      "8500\n",
-      "8600\n",
-      "8700\n",
-      "8800\n",
-      "8900\n",
-      "9000\n",
-      "9100\n",
-      "9200\n",
-      "9300\n",
-      "9400\n",
-      "9500\n",
-      "9600\n",
-      "9700\n",
-      "9800\n",
-      "9900\n",
-      "10000\n",
-      "10100\n",
-      "10200\n",
-      "10300\n",
-      "10400\n",
-      "10500\n",
-      "10600\n",
-      "10700\n",
-      "10800\n",
-      "10900\n",
-      "11000\n",
-      "11100\n",
-      "11200\n",
-      "11300\n",
-      "11400\n",
-      "11500\n",
-      "11600\n",
-      "11700\n",
-      "11800\n",
-      "11900\n",
-      "12000\n",
-      "12100\n",
-      "12200\n",
-      "12300\n",
-      "12400\n",
-      "12500\n",
-      "12600\n",
-      "12700\n",
-      "12800\n",
-      "12900\n",
-      "13000\n",
-      "13100\n",
-      "13200\n",
-      "13300\n",
-      "13400\n",
-      "13500\n",
-      "13600\n",
-      "13700\n",
-      "13800\n",
-      "13900\n",
-      "14000\n",
-      "14100\n",
-      "14200\n",
-      "14300\n",
-      "14400\n",
-      "14500\n",
-      "14600\n",
-      "14700\n",
-      "14800\n",
-      "14900\n",
-      "15000\n",
-      "15100\n",
-      "15200\n",
-      "15300\n",
-      "15400\n",
-      "15500\n",
-      "15600\n",
-      "15700\n",
-      "15800\n",
-      "15900\n",
-      "16000\n",
-      "16100\n",
-      "16200\n",
-      "16300\n",
-      "16400\n",
-      "16500\n",
-      "16600\n",
-      "16700\n",
-      "16800\n",
-      "16900\n",
-      "17000\n",
-      "17100\n",
-      "17200\n",
-      "17300\n",
-      "17400\n",
-      "17500\n",
-      "17600\n",
-      "17700\n",
-      "17800\n",
-      "17900\n"
+      "5100\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tamaños30000, duracion30000 \u001b[39m=\u001b[39m tiempos_a_graficar(e_i_30000, s_i_30000)\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m tamaños\u001b[39m.\u001b[39mappend(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m inicio \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m ganancia_maxima_posible(e_i[:i\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m], s_i[:i\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m fin \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(i)\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb Cell 22\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m   ganancias_obtenidas[dia][\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(ganancia_2_dias_antes(ganancias_obtenidas, dia))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m   \u001b[39mfor\u001b[39;00m dia_entrenado \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, dias_entrenados):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m     ganancias_obtenidas[dia][dia_entrenado] \u001b[39m=\u001b[39m ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) \u001b[39m+\u001b[39m ganancias_obtenidas[dia\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][dia_entrenado\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m   dias_entrenados \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39mreturn\u001b[39;00m ganancias_obtenidas, \u001b[39mmax\u001b[39m(ganancias_obtenidas[cantidad_dias\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb Cell 22\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mganancia_dia_actual\u001b[39m(e_i, s_i, dia, dias_entrenados):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mmin\u001b[39;49m(e_i[dia], s_i[dias_entrenados])\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "tamaños30000, duracion30000 = tiempos_a_graficar(e_i, s_i)"
+    "tamaños30000, duracion30000 = tiempos_a_graficar(e_i_30000, s_i_30000)"
    ]
   },
   {
