--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,14 +159,12 @@
     "\n",
     "  for dia in range(1, cantidad_dias):\n",
     "    ganancias_obtenidas[dia][0] = ganancia_dia_actual(e_i, s_i, dia, 0)\n",
-    "    ganancias_obtenidas[dia][0] += max(ganancia_2_dias_antes(ganancias_obtenidas, dia))\n",
+    "    ganancias_obtenidas[dia][0] += max(ganancias_obtenidas[dia-2] if dia > 1 else [0])\n",
     "    for dia_entrenado in range(1, dias_entrenados):\n",
     "      ganancias_obtenidas[dia][dia_entrenado] = ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
     "    dias_entrenados += 1\n",
     "  return ganancias_obtenidas, max(ganancias_obtenidas[cantidad_dias-1])\n",
-    "\n",
-    "def ganancia_2_dias_antes(ganancias_obtenidas, dia):\n",
-    "    return ganancias_obtenidas[dia-2] if dia > 1 else [0]\n"
+    "\n"
    ]
   },
   {
@@ -185,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,16 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 30k: 110.58277726173401 seconds ---\n",
-      "--- 15k: 27.63995862007141 seconds ---\n",
-      "El caso base de 1 dia es:  1\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -374,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,8 +390,6 @@
     "    inicio = time.time()\n",
     "    ganancia_maxima_posible(e_i[:i+1], s_i[:i+1])\n",
     "    fin = time.time()\n",
-    "\n",
-    "    print(i)\n",
     "    duracion.append(fin - inicio)\n",
     "\n",
     "  return tamaños, duracion"
@@ -402,82 +397,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
-      "1100\n",
-      "1200\n",
-      "1300\n",
-      "1400\n",
-      "1500\n",
-      "1600\n",
-      "1700\n",
-      "1800\n",
-      "1900\n",
-      "2000\n",
-      "2100\n",
-      "2200\n",
-      "2300\n",
-      "2400\n",
-      "2500\n",
-      "2600\n",
-      "2700\n",
-      "2800\n",
-      "2900\n",
-      "3000\n",
-      "3100\n",
-      "3200\n",
-      "3300\n",
-      "3400\n",
-      "3500\n",
-      "3600\n",
-      "3700\n",
-      "3800\n",
-      "3900\n",
-      "4000\n",
-      "4100\n",
-      "4200\n",
-      "4300\n",
-      "4400\n",
-      "4500\n",
-      "4600\n",
-      "4700\n",
-      "4800\n",
-      "4900\n",
-      "5000\n",
-      "5100\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tamaños30000, duracion30000 \u001b[39m=\u001b[39m tiempos_a_graficar(e_i_30000, s_i_30000)\n",
-      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb Cell 22\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m tamaños\u001b[39m.\u001b[39mappend(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m inicio \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m ganancia_maxima_posible(e_i[:i\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m], s_i[:i\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m fin \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(i)\n",
-      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb Cell 22\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m   ganancias_obtenidas[dia][\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(ganancia_2_dias_antes(ganancias_obtenidas, dia))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m   \u001b[39mfor\u001b[39;00m dia_entrenado \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, dias_entrenados):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m     ganancias_obtenidas[dia][dia_entrenado] \u001b[39m=\u001b[39m ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) \u001b[39m+\u001b[39m ganancias_obtenidas[dia\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][dia_entrenado\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m   dias_entrenados \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39mreturn\u001b[39;00m ganancias_obtenidas, \u001b[39mmax\u001b[39m(ganancias_obtenidas[cantidad_dias\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n",
-      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb Cell 22\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mganancia_dia_actual\u001b[39m(e_i, s_i, dia, dias_entrenados):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP2/TP2.ipynb#X30sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39mmin\u001b[39;49m(e_i[dia], s_i[dias_entrenados])\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tamaños30000, duracion30000 = tiempos_a_graficar(e_i_30000, s_i_30000)"
    ]
