--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,15 +154,15 @@
     "  cantidad_dias = len(e_i) # n\n",
     "\n",
     "  ganancias_obtenidas = [[0] * cantidad_dias for _ in range(cantidad_dias)] # matriz de n*n\n",
-    "  dias_entrenados = 2\n",
+    "  dias_previos_entrenados = 2\n",
     "  ganancias_obtenidas[0][0] = ganancia_dia_actual(e_i, s_i, 0, 0)\n",
     "\n",
     "  for dia in range(1, cantidad_dias):\n",
     "    ganancias_obtenidas[dia][0] = ganancia_dia_actual(e_i, s_i, dia, 0)\n",
     "    ganancias_obtenidas[dia][0] += max(ganancias_obtenidas[dia-2] if dia > 1 else [0])\n",
-    "    for dia_entrenado in range(1, dias_entrenados):\n",
+    "    for dia_entrenado in range(1, dias_previos_entrenados):\n",
     "      ganancias_obtenidas[dia][dia_entrenado] = ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
-    "    dias_entrenados += 1\n",
+    "    dias_previos_entrenados += 1\n",
     "  return ganancias_obtenidas, max(ganancias_obtenidas[cantidad_dias-1])\n",
     "\n"
    ]
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
