agg celda para probar otro path

--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,8 +163,7 @@
     "    for dia_entrenado in range(1, dias_previos_entrenados):\n",
     "      ganancias_obtenidas[dia][dia_entrenado] = ganancia_dia_actual(e_i, s_i, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
     "    dias_previos_entrenados += 1\n",
-    "  return ganancias_obtenidas, max(ganancias_obtenidas[cantidad_dias-1])\n",
-    "\n"
+    "  return ganancias_obtenidas, max(ganancias_obtenidas[cantidad_dias-1])"
    ]
   },
   {
@@ -183,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,18 +333,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "start_time = time.time()\n",
@@ -371,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,6 +422,36 @@
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dejamos una celda para que puedan ejecutar el algoritmo con el archivo que deseen, mientras cumpla con el formato establecido."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ganancia máxima:  7\n",
+      "Plan de entrenamiento:  ['Descanso', 'Entreno', 'Entreno']\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = 'sets/catedra/3.txt' # cambiar por el path del archivo a analizar\n",
+    "e_i, s_i = obtener_ganancias_y_energias(path)\n",
+    "g, ganancia_max = ganancia_maxima_posible(e_i, s_i)\n",
+    "solucion = reconstruir_solucion(g, ganancia_max)\n",
+    "print(\"Ganancia máxima: \", ganancia_max)\n",
+    "print(\"Plan de entrenamiento: \", solucion)"
    ]
   }
  ],
