--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -130,7 +130,7 @@
     "  n = len(ganancias) - 1\n",
     "  solucion = []\n",
     "  # recorrer la matriz bajando siempre por la diagonal hasta llegar a la fila 0,\n",
-    "  # luego ir al maximo de la anterior fila\n",
+    "  # luego ir al maximo de la anterior columna\n",
     "  dia = n - 1 # columnas\n",
     "  dias_entrenados = ganancias[n].index(ganancia_maxima) - 1 # filas\n",
     "  solucion.append('Entreno')\n",
