Detalles y creación de los archivos a utilizar

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TP3: Problemas NP-Completos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funciones auxiliares\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -63,6 +77,29 @@
     "                preseleccion.append(nombre)\n",
     "\n",
     "    return pedidos_de_la_prensa, preseleccion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Paths de los archivos a utilizar\n",
+    "path_5 = 'sets de la catedra/5.txt'\n",
+    "path_7 = 'sets de la catedra/7.txt'\n",
+    "path_10_pocos = 'sets de la catedra/10_pocos.txt'\n",
+    "path_10_todos = 'sets de la catedra/10_todos.txt'\n",
+    "path_10_varios = 'sets de la catedra/10_varios.txt'\n",
+    "path_15 = 'sets de la catedra/15.txt'\n",
+    "path_20 = 'sets de la catedra/20.txt'\n",
+    "path_75 = 'sets de la catedra/75.txt'\n",
+    "path_100 = 'sets de la catedra/100.txt'\n",
+    "path_200 = 'sets de la catedra/200.txt'\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
