Función para leer los resultados esperadas, está mal. Hay que corregirla

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -101,6 +101,55 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'cantidad_minima'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tobia\\TDA-I-Fiuba\\TP3\\TP3.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m# Acceder a los datos almacenados en las estructuras\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mfor\u001b[39;00m resultado \u001b[39min\u001b[39;00m resultados:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mCantidad mínima:\u001b[39m\u001b[39m\"\u001b[39m, resultado\u001b[39m.\u001b[39;49mcantidad_minima)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mJugadores:\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(resultado\u001b[39m.\u001b[39mjugadores))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mprint\u001b[39m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'cantidad_minima'"
+     ]
+    }
+   ],
+   "source": [
+    "#Me guardo los resultados esperados, dados por la cátedra\n",
+    "class Resultado:\n",
+    "    def __init__(self, cantidad_minima, jugadores):\n",
+    "        self.cantidad_minima = cantidad_minima\n",
+    "        self.jugadores = jugadores\n",
+    "\n",
+    "def obtener_resultados_esperados(nombre_archivo):\n",
+    "    with open(nombre_archivo, 'r') as file:\n",
+    "        lineas = file.readlines()\n",
+    "        resultados = []\n",
+    "\n",
+    "        for linea in lineas:\n",
+    "            if \"Cantidad mínima:\" in linea:\n",
+    "                cantidad_minima = int(linea.split(\":\")[1].split(\"(\")[0].strip())\n",
+    "                jugadores_linea = lineas[lineas.index(linea)]\n",
+    "                jugadores = [jugador.strip() for jugador in jugadores_linea.split(\"(\")[1].split(\")\")[0].split(\",\")]\n",
+    "                resultados.append(Resultado(cantidad_minima, jugadores))\n",
+    "\n",
+    "        return resultados\n",
+    "    \n",
+    "# Uso del código\n",
+    "nombre_del_archivo = \"sets de la catedra/Resultados Esperados.txt\"  # Reemplaza con la ruta de tu archivo\n",
+    "resultados = leer_archivo(nombre_del_archivo)\n",
+    "\n",
+    "# Acceder a los datos almacenados en las estructuras\n",
+    "for resultado in resultados:\n",
+    "    print(\"Cantidad mínima:\", resultado.cantidad_minima)\n",
+    "    print(\"Jugadores:\", \", \".join(resultado.jugadores))\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
